expense module integration

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@ n.left+Math.round(u)}var c=n.height-(n.paddingTop+n.paddingBottom),h=c/o,f=h*(e-
 				<span class="motives-val">VIBRANCY</span><br>
 			</div>
 			<div class="brand-loading">
-				<h1 class="logo-name"> <img src="logo.svg" class="logo-head responsive-img" />VIBRANT<span class="web">WEB</span></h1>
+				<h1 class="logo-name"> <img src="assets/images/logo.svg" class="logo-head responsive-img" />VIBRANT<span class="web">WEB</span></h1>
 				<div class="version">
 					Version 1.3
 				</div>
