Removed Location Landing page from application

--- a/src/index-ng.html
+++ b/src/index-ng.html
@@ -7,12 +7,12 @@
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
 		crossorigin="anonymous"></script>
 	<script>
-		navigator.permissions.query({ name: 'geolocation' })
-			.then(function (permissionStatus) {
-				if (permissionStatus.state == "denied" || permissionStatus.state == "prompt") {
-					window.location.href = "index.html";
-				}
-			});
+		// navigator.permissions.query({ name: 'geolocation' })
+		// 	.then(function (permissionStatus) {
+		// 		if (permissionStatus.state == "denied" || permissionStatus.state == "prompt") {
+		// 			window.location.href = "index.html";
+		// 		}
+		// 	});
 	</script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
 <script>
