--- a/src/index.html
+++ b/src/index.html
@@ -6,32 +6,32 @@
 	<title>VibrantWebRefresh</title>
 	<script>
 
-		window.navigator.geolocation.getCurrentPosition(this.success, this.error, { timeout: 10000 });
+		// window.navigator.geolocation.getCurrentPosition(this.success, this.error, { timeout: 10000 });
 
-		function success(position) {
+		// function success(position) {
 
-			// if (localStorage.getItem("geolocation") != null) {
-			//     return false;
-			// }
+		// 	// if (localStorage.getItem("geolocation") != null) {
+		// 	//     return false;
+		// 	// }
 
-			let latitude = position.coords.latitude.toFixed(5);
-			let longitude = position.coords.longitude.toFixed(5);
-			let timestamp = Number(String(position.timestamp).substring(0, 7));
+		// 	let latitude = position.coords.latitude.toFixed(5);
+		// 	let longitude = position.coords.longitude.toFixed(5);
+		// 	let timestamp = Number(String(position.timestamp).substring(0, 7));
 
-			var locationUrl = "https://maps.googleapis.com/maps/api/timezone/json?location=" + latitude + "," + longitude + "&timestamp=" + timestamp + "&key=AIzaSyACjdU4Ktfz70yFgVAPAS2loH2HcFiY2KI";
+		// 	var locationUrl = "https://maps.googleapis.com/maps/api/timezone/json?location=" + latitude + "," + longitude + "&timestamp=" + timestamp + "&key=AIzaSyACjdU4Ktfz70yFgVAPAS2loH2HcFiY2KI";
 
-			$.getJSON(locationUrl).done(function (location) {
-				if (location.status == "OK") {
-					localStorage.setItem("geolocation", JSON.stringify(location));
-					location.href = "#/my/dashboard";
-				}
-			});
-		}
+		// 	$.getJSON(locationUrl).done(function (location) {
+		// 		if (location.status == "OK") {
+		// 			localStorage.setItem("geolocation", JSON.stringify(location));
+		// 			location.href = "#/my/dashboard";
+		// 		}
+		// 	});
+		// }
 
-		function error(err) {
-			location.href = "#/enablelocation";
-			console.log(err);
-		}
+		// function error(err) {
+		// 	location.href = "#/enablelocation";
+		// 	console.log(err);
+		// }
 
 	</script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
