--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,40 @@
 <!doctype html>
 <html>
+
 <head>
-  <meta charset="utf-8">
-  <title>VW-Refresh</title>
-  <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+	<meta charset="utf-8">
+	<title>VW-Refresh</title>
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+		crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
-  <base href="/">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link type="text/css" rel="stylesheet" href="assets/fonts/font-awesome/css/font-awesome.min.css" media="screen,projection">
-	<link rel="stylesheet" href="assets/css/materialize.css">
-	<link rel="stylesheet" href="assets/css/styles.css">
-	<link rel="stylesheet" href="assets/css/splash_screen.css">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-  	</head>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
+	<script>
+		(function (i, s, o, g, r, a, m) {
+			i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+				(i[r].q = i[r].q || []).push(arguments)
+			}, i[r].l = 1 * new Date(); a = s.createElement(o),
+				m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+		ga('create', 'UA-91282708-1', 'auto');
+		ga('send', 'pageview');
+
+	</script>
+<base href="/">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link type="text/css" rel="stylesheet" href="assets/fonts/font-awesome/css/font-awesome.min.css" media="screen,projection">
+<link rel="stylesheet" href="assets/css/materialize.css">
+<link rel="stylesheet" href="assets/css/styles.css">
+<link rel="stylesheet" href="assets/css/splash_screen.css">
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
+
 <body>
-  <app-root>
-  
-  <div class="splash">
+	<app-root>
+
+		<div class="splash">
 			<div class="motives">
 				<span class="motives-val">EXCELLENCE</span><br>
 				<span class="motives-val">HONESTY</span><br>
@@ -40,9 +55,10 @@
 		</div>
 		<span class="prelodr prelodr-in"><span><span class="prelodr-in">Initializing...<span class="prelodr-progressbar"></span></span>
 		</span>
-		</span>    
-      
-      
-  </app-root>
+		</span>
+
+
+	</app-root>
 </body>
+
 </html>
